# iden3math-evil

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_whl.py
include/iden3math/: bigint.h  bitvec.h  fp1.h  macro.h  prime.h  random.h  serialize.h  typedef.h
include/iden3math/ec/: babyjub.h  point.h
include/iden3math/hash/: blake.h  keccak.h  mimc.h  pedersen.h
src/cxx/: bigint.cxx  bitvec.cxx  fp1.cxx  prime.cxx  random.cxx  serialize.cxx
src/cxx/ec/: babyjub.cxx
src/cxx/hash/: blake.cxx  keccak.cxx  mimc.cxx  pedersen.cxx
src/pyc/: bitvec_py.cxx  fp1_py.cxx  helper_py.h  iden3math_py.cxx  prime_py.cxx  random_py.cxx  typedef_py.cxx
src/pyc/ec/: babyjub_py.cxx  ec_py.h  point_py.cxx
src/pyc/hash/: blake_py.cxx  hash_py.h  keccak_py.cxx  mimc_py.cxx  pedersen_py.cxx
test/cxx/: bitvec_test.cxx  fp1_test.cxx  helper.h  random_test.cxx  serialize_test.cxx
test/cxx/ec/: babyjub_test.cxx
test/cxx/hash/: blake_test.cxx  keccak_test.cxx  mimc_test.cxx  pedersen_test.cxx
test/py/: test_bitvec.py  test_ec_babyjub.py  test_fp1.py  test_hash_blake.py  test_hash_keccak.py  test_hash_mimc.py  test_hash_pedersen.py  test_random.py
tools/: precompute.cxx
